Fixed count label alignment

--- a/src/app/components/collection/collection.component.scss
+++ b/src/app/components/collection/collection.component.scss
@@ -57,11 +57,15 @@
   margin: 0 0 10px 10px;
   min-width: 22px;
   height: 22px;
-  border-radius: 12px;
-  padding: 1px 7px 1px 7px;
+  border-radius: 11px;
+  padding-left: 7px;
+  padding-right: 7px;
   color: #fff;
   font-size: 12px;
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .list-button {
